--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>groupId</groupId>
     <artifactId>JavaFxApplication</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.fxml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
