First visuel created. Pom xml modifyied to accept png and jpg.

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,11 @@
                 <directory>src/main/java</directory>
                 <includes>
                     <include>**/*.fxml</include>
+                    <include>**/*.css</include>
                 </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
             </resource>
         </resources>
     </build>
