--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,25 @@
             <artifactId>json</artifactId>
             <version>20171018</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>4.0.8-alpha</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit</artifactId> <!-- or testfx-junit5 -->
+            <version>4.0.8-alpha</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
