Add korrigan and troll image. Adapt animation to game class with card parameters, not finished.

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,18 @@
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
+
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+            <testResource>
+                <directory>src/test/java</directory>
+                <includes>
+                    <include>**/*.feature</include>
+                </includes>
+            </testResource>
+        </testResources>
     </build>
 
 
